--- a/Makefile.FNAL
+++ b/Makefile.FNAL
@@ -5,6 +5,7 @@ CC          = g++
 CPPFLAGS    =  -I$(INC_DIR) -fPIC
 CXXFLAGS    = -g -std=c++11 -Wall -fdiagnostics-color=always -Wno-reorder -Wno-sign-compare -Wno-unused-variable -Wno-unused-but-set-variable -MMD -MP `root-config --libs` -lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -pthread -lm -ldl -rdynamic -pthread -m64
 CPPFLAGS   += `root-config --cflags`
+
 LDFLAGS     = `root-config --libs` -lMinuit
 OUTPUT_OPTION = -o $@
 
@@ -39,7 +40,7 @@ clean:
 
 $(SRC_DIR)/FindMrdTracks_RootDict.cpp: $(INC_DIR)/FindMrdTracks_Linkdef.h
 	@echo "making $@"
-	rootcint -f $@ -c -p $(CPPFLAGS) $(HDR_NAMES) $^
+	rootcint -f $@ -c -I$(INC_DIR) $(HDR_NAMES) $^
 
 $(INC_DIR)/FindMrdTracks_Linkdef.h:
 	@echo "making $@"
